--- a/.github/workflows/phyddle-tests.yml
+++ b/.github/workflows/phyddle-tests.yml
@@ -31,4 +31,4 @@ jobs:
 #           ruff --format=github --target-version=py37 .
       - name: Test with pytest
         run: |
-          pytest
+          pytest tests/
