--- a/.github/workflows/phyddle-tests.yml
+++ b/.github/workflows/phyddle-tests.yml
@@ -21,6 +21,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
+          pip install .
           pip install ruff pytest scipy numpy matplotlib tensorflow dendropy
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 #       - name: Lint with ruff
