--- a/.github/workflows/phyddle-tests.yml
+++ b/.github/workflows/phyddle-tests.yml
@@ -22,7 +22,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install .
-          pip install ruff pytest scipy numpy matplotlib tensorflow dendropy
+          pip install ruff pytest scipy numpy matplotlib tensorflow dendropy pandas
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 #       - name: Lint with ruff
 #         run: |
