--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,36 @@
-# Ignore phyddle dirs
-code/__pycache__/*
+# Ignore phyddle workspace dirs
 workspace/raw_data/*/*
 workspace/tensor_data/*/*
 workspace/network/*/*
 workspace/predict/*/*
 workspace/plot/*/*
+
+# ... except workspace `example` project
+!workspace/raw_data/example/*
+!workspace/tensor_data/example/*
+!workspace/network/example/*
+!workspace/predict/example/*
+!workspace/plot/example/*
+
+# Ignore phyddle accessory dirs
 sandbox/
+paper/
+dist/
+code/
+_old/
+
+# Ignore phyddle accessory files
+notes.txt
+pkg_notes.txt
+
+# Ignore __pycache__
+*/__pycache__/
+tests/__pycache__/
+scripts/__pycache__/
+
+# Ignore Sphinx extras
+docs/build/doctrees
+docs/build/doctrees/*
 
 # Ignore OS files
 .DS_Store
@@ -17,26 +42,3 @@ sandbox/
 .vscode/
 .ipynb_checkpoints/
 
-# Exceptions for `example` project
-!workspace/raw_data/example/*
-!workspace/tensor_data/example/*
-!workspace/network/example/*
-!workspace/predict/example/*
-!workspace/plot/example/*
-raw_data/example.zip
-
-# Ignore tests
-tests/__pycache__/
-
-# Ignore accessory dirs
-paper/
-dist/
-_old/
-
-# Ignore accessory files
-notes.txt
-pkg_notes.txt
-
-# Sphinx
-docs/build/doctrees
-docs/build/doctrees/*
