--- a/.github/workflows/phyddle-tests.yml
+++ b/.github/workflows/phyddle-tests.yml
@@ -10,19 +10,25 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.10", "3.11"]
+        python-version: ['3.10', '3.11']
+        R: [ '4.2.2' ]
 
     steps:
       - uses: actions/checkout@v3
+      - name: Setup R ${{ matrix.R }}
+        uses: r-lib/actions/setup-r@v2
+        with:
+          r-version: ${{ matrix.R }}
+        run: Rscript -e "install.packages('ape', repos='http://cran.us.r-project.org')"
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Install dependencies
+      - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
           pip install .
-          pip install ruff pytest scipy numpy matplotlib tensorflow dendropy pandas
+          pip install ruff pytest scipy numpy matplotlib tensorflow dendropy pandas pypdf
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 #       - name: Lint with ruff
 #         run: |
