--- a/.github/workflows/phyddle-tests.yml
+++ b/.github/workflows/phyddle-tests.yml
@@ -19,13 +19,13 @@ jobs:
         uses: r-lib/actions/setup-r@v2
         with:
           r-version: ${{ matrix.R }}
-        run: Rscript -e "install.packages('ape', repos='http://cran.us.r-project.org')"
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
       - name: Install Python dependencies
         run: |
+          Rscript -e "install.packages('ape', repos='http://cran.us.r-project.org')"
           python -m pip install --upgrade pip
           pip install .
           pip install ruff pytest scipy numpy matplotlib tensorflow dendropy pandas pypdf
