--- a/.github/workflows/phyddle-tests.yml
+++ b/.github/workflows/phyddle-tests.yml
@@ -28,7 +28,7 @@ jobs:
           Rscript -e "install.packages('ape', repos='http://cran.us.r-project.org')"
           python -m pip install --upgrade pip
           pip install .
-          pip install ruff pytest scipy numpy matplotlib tensorflow keras sklearn dendropy pandas pypdf joblib tqdm
+          pip install ruff pytest scipy numpy matplotlib tensorflow keras scikit-learn dendropy pandas pypdf joblib tqdm
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 #       - name: Lint with ruff
 #         run: |
