--- a/.gitignore
+++ b/.gitignore
@@ -27,8 +27,11 @@ notes.txt
 pkg_notes.txt
 
 # Ignore __pycache__
-*/__pycache__/
-*/*/__pycache__/
+scripts/__pycache__/*
+*/__pycache__/*
+*/*/__pycache__/*
+*/__pycache__
+*/*/__pycache__
 
 # Ignore Sphinx extras
 docs/build/doctrees
