--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,21 +15,23 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - name: Setup R ${{ matrix.R }}
-        uses: r-lib/actions/setup-r@v2
-        with:
-          r-version: ${{ matrix.R }}
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
       - name: Install Python dependencies
         run: |
-          Rscript -e "install.packages(c('ape', 'castor'), repos='http://cran.us.r-project.org')"
           python -m pip install --upgrade pip
           pip install .
           pip install ruff pytest scipy numpy matplotlib tensorflow keras scikit-learn dendropy pandas pypdf joblib tqdm
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+      - name: Setup R ${{ matrix.R }}
+        uses: r-lib/actions/setup-r@v2
+        with:
+          r-version: ${{ matrix.R }}
+      - name: Install R packages
+        run: |
+          Rscript -e "install.packages(c('ape', 'castor'), repos='http://cran.us.r-project.org')"
 #       - name: Lint with ruff
 #         run: |
 #           # stop the build if there are Python syntax errors or undefined names
