--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -40,4 +40,4 @@ jobs:
 #           ruff --format=github --target-version=py37 .
       - name: Test with pytest
         run: |
-          pytest tests/
+          pytest -s tests/
