--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,9 +14,16 @@ jobs:
         R: [ '4.2.2' ]
 
     steps:
+      - uses: actions/checkout@v3
       - name: Install graphviz
         run: sudo apt-get install -y graphviz
-      - uses: actions/checkout@v3
+      - name: Setup R ${{ matrix.R }}
+        uses: r-lib/actions/setup-r@v2
+        with:
+          r-version: ${{ matrix.R }}
+      - uses: r-lib/actions/setup-r-dependencies@v2
+        with:
+          extra-packages: any::castor any::ape
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
         with:
@@ -27,13 +34,10 @@ jobs:
           pip install .
           pip install ruff pytest scipy numpy matplotlib tensorflow keras scikit-learn dendropy pandas pypdf joblib tqdm pydot
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-      - name: Setup R ${{ matrix.R }}
-        uses: r-lib/actions/setup-r@v2
-        with:
-          r-version: ${{ matrix.R }}
-      - name: Install R packages
-        run: |
-          Rscript -e "install.packages(c('ape', 'castor'), repos='http://cran.us.r-project.org')"
+
+#      - name: Install R packages
+#        run: |
+#          Rscript -e "install.packages(c('ape', 'castor'), repos='http://cran.us.r-project.org')"
 #       - name: Lint with ruff
 #         run: |
 #           # stop the build if there are Python syntax errors or undefined names
