--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,20 +15,28 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+
       - name: Install graphviz
         run: sudo apt-get install -y graphviz
+
       - name: Setup R ${{ matrix.R }}
         uses: r-lib/actions/setup-r@v2
         with:
           r-version: ${{ matrix.R }}
+
+	  - name: Install R packages
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
-          extra-packages: any::castor any::ape
-      - name: Set up Python ${{ matrix.python-version }}
+          extra-packages: |
+			any::castor
+			any::ape
+
+      - name: Setup Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Install Python dependencies
+
+      - name: Install Python packages
         run: |
           python -m pip install --upgrade pip
           pip install .
