--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       matrix:
         python-version: ['3.11']
-        R: [ '4.2.2' ]
+        R-version: [ '4.2.2' ]
 
     steps:
       - uses: actions/checkout@v3
@@ -19,13 +19,13 @@ jobs:
       - name: Install graphviz
         run: sudo apt-get install -y graphviz
 
-      - name: Setup R ${{ matrix.R }}
+      - name: Setup R ${{ matrix.R-version }}
         uses: r-lib/actions/setup-r@v2
         with:
-          r-version: ${{ matrix.R }}
+          r-version: ${{ matrix.R-version }}
 
 	  - name: Install R packages
-      - uses: r-lib/actions/setup-r-dependencies@v2
+        uses: r-lib/actions/setup-r-dependencies@v2
         with:
           extra-packages: |
 			any::castor
