--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       matrix:
         python-version: ['3.11']
-        R-version: [ '4.2.2' ]
+        R: [ '4.2.2' ]
 
     steps:
       - uses: actions/checkout@v3
@@ -20,7 +20,7 @@ jobs:
       - name: Setup R ${{ matrix.R-version }}
         uses: r-lib/actions/setup-r@v2
         with:
-          r-version: ${{ matrix.R-version }}
+          r-version: ${{ matrix.R }}
       - name: Install R packages
         uses: r-lib/actions/setup-r-dependencies@v2
         with:
