--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,12 +15,15 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+
       - name: Install graphviz
         run: sudo apt-get install -y graphviz
-      - name: Setup R ${{ matrix.R-version }}
+      
+      - name: Setup R ${{ matrix.R }}
         uses: r-lib/actions/setup-r@v2
         with:
           r-version: ${{ matrix.R }}
+      
       - name: Install R packages
         uses: r-lib/actions/setup-r-dependencies@v2
         with:
