--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -24,25 +24,27 @@ jobs:
         with:
           r-version: ${{ matrix.R }}
       
-      - name: Install R packages
-        uses: r-lib/actions/setup-r-dependencies@v2
-        with:
-          extra-packages: |
-			any::castor
-			any::ape
+            #- name: Install R packages
+            #uses: r-lib/actions/setup-r-dependencies@v2
+            #with:
+            #extra-packages: |
+            #			any::castor
+#            any::ape
+
       - name: Setup Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
+
       - name: Install Python packages
         run: |
           python -m pip install --upgrade pip
           pip install .
           pip install ruff pytest scipy numpy matplotlib tensorflow keras scikit-learn dendropy pandas pypdf joblib tqdm pydot
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-#      - name: Install R packages
-#        run: |
-#          Rscript -e "install.packages(c('ape', 'castor'), repos='http://cran.us.r-project.org')"
+      - name: Install R packages
+        run: |
+          Rscript -e "install.packages(c('ape', 'castor'), repos='http://cran.us.r-project.org')"
 #       - name: Lint with ruff
 #         run: |
 #           # stop the build if there are Python syntax errors or undefined names
