--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -24,12 +24,12 @@ jobs:
         with:
           r-version: ${{ matrix.R }}
       
-            #- name: Install R packages
-            #uses: r-lib/actions/setup-r-dependencies@v2
-            #with:
-            #extra-packages: |
-            #			any::castor
-#            any::ape
+      - name: Install R packages
+        uses: r-lib/actions/setup-r-dependencies@v2
+        with:
+          packages: |
+             any::castor
+             any::ape
 
       - name: Setup Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
@@ -42,9 +42,9 @@ jobs:
           pip install .
           pip install ruff pytest scipy numpy matplotlib tensorflow keras scikit-learn dendropy pandas pypdf joblib tqdm pydot
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-      - name: Install R packages
-        run: |
-          Rscript -e "install.packages(c('ape', 'castor'), repos='http://cran.us.r-project.org')"
+          #- name: Install R packages
+          #run: |
+          #Rscript -e "install.packages(c('ape', 'castor'), repos='http://cran.us.r-project.org')"
 #       - name: Lint with ruff
 #         run: |
 #           # stop the build if there are Python syntax errors or undefined names
