--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -16,7 +16,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Install graphviz
+      - name: Install OS packages
         run: sudo apt-get install -y graphviz
       
       - name: Setup R ${{ matrix.R }}
