--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -7,8 +7,8 @@ package:
 
 source:
   # get URL & SHA for new version from: https://pypi.org/project/phyddle/#modal-close
-  url: https://files.pythonhosted.org/packages/e9/77/f1ada90c4fac985c2604b582cbc3fad51fa01c6a705bdd1acb0a41af8a00/phyddle-0.2.0.tar.gz
-  sha: 640750f8c09afce582496c3a2d86304c91ae61eb93d9528177fd67cee267de68
+  url: https://files.pythonhosted.org/packages/d1/c8/a13269d5e2dd3ee7c2a5322c05be0272ee0286a658a52dcf6b91321a7daf/phyddle-0.2.0.tar.gz
+  sha: f1f0b11a9f3066b94091b2cade62bbed94a68f566839c6e72a5563dd98ff3c55
 
 build:
   noarch: generic
@@ -39,7 +39,8 @@ requirements:
     - python-graphviz
     - scikit-learn >=1.2
     - scipy >=1.11
-    - tensorflow >=2.12
+    - pytorch
+    - torchvision
     - tqdm
 
 test:
