--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,12 +4,12 @@ build-backend = "hatchling.build"
 
 [project]
 name = "phyddle"
-version = "0.2.2"
+version = "0.3.0"
 authors = [
   { name="Michael Landis", email="michael.landis@wustl.edu" },
   { name="Ammon Thompson", email="ammonthompson@gmail.com" },
 ]
-description = "Software to fiddle around with deep learning for phylogenetic models"
+description = "Software for phylogenetic model exploration with deep learning"
 readme = "README.md"
 
 requires-python = ">=3.7"
